# worktime

./: .gitignore  Cargo.toml  README.md  flake.nix
src/: app.rs  config.rs  db.rs  main.rs  state.rs
src/app/: background.rs  mod.rs
src/app/events/: confirm.rs  history.rs  main_screen.rs  mod.rs  options.rs
src/ui/: confirm_delete.rs  entries.rs  error.rs  header.rs  history.rs  input.rs  log.rs  mod.rs  options.rs
